<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_money_white_24dp"
            android:title="@string/invoice" />
        <item
            android:id="@+id/nav_hold"
            android:icon="@drawable/ic_pause_black_24dp"
            android:title="@string/hold" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/customer" />
    </group>
    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/action_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />
    </group>

</menu>
