<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailTab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:useDefaultMargins="true"
            android:alignmentMode="alignBounds"
            android:columnOrderPreserved="true"
            android:columnCount="2"
            android:padding="10dp">

            <TextView
                android:text="@string/name"
                android:layout_gravity="left"
                />

            <EditText
                android:ems="10"
                android:id="@+id/nameBox"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/barcodeLabel"
                android:text="@string/barcode"
                android:layout_column="0"
                android:layout_gravity="left"
                />

            <EditText
                android:ems="10"
                android:id="@+id/barcodeBox"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/priceLabel"
                android:text="@string/unit_price"
                android:layout_column="0"
                android:layout_gravity="left"
                />

            <EditText
                android:ems="10"
                android:id="@+id/priceBox"
                android:inputType="number"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/colorBlack"
                />

            <Space
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_gravity="fill"
                />

            <Button
                android:id="@+id/openEditButton"
                android:text="@string/change_data"
                android:layout_row="6"
                android:layout_column="1"
                android:background="@color/btnInfo"
                android:textColor="@color/colorWhite"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="10dp"
                />
        </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/btnWarning"
            android:paddingHorizontal="10dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/submitEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/btnInfo"
            android:paddingHorizontal="10dp"
            android:text="@string/save" />
    </LinearLayout>

    </LinearLayout>

</ScrollView>