<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle"
                    android:layout_marginTop="@dimen/spacing_large"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/logo_small"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/welcome_back"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/blue_grey_800"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/action_sign_in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_300"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/blue_grey_800"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/spacing_large"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_300"
                    android:theme="@style/EditText.Grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/blue_grey_800"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_300"
                    android:theme="@style/EditText.Grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <!-- password repeat start -->
                <LinearLayout
                    android:id="@+id/passwordRepeatContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/passwordRepeatLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_password_repeat"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/blue_grey_800"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordRepeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_300"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_middle" />

                </LinearLayout>
                <!-- password repeat end -->

                <!-- name start -->
                <LinearLayout
                    android:id="@+id/nameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_name"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/blue_grey_800"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/nameBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_300"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_middle" />

                </LinearLayout>
                <!-- name end -->

                <!-- phone start -->
                <LinearLayout
                    android:id="@+id/phoneContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_phone"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/blue_grey_800"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phoneBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="phone"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_300"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_middle" />

                </LinearLayout>
                <!-- phone end -->

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:clickable="true"
                    android:text="Forgot Password?"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_400"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_purple_a400"
                    android:text="@string/action_sign_in_short"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:text="@string/action_submit"
                    android:textStyle="bold"
                    android:background="@color/btnInfo"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <LinearLayout
                    android:id="@+id/signup_button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_have_account"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_300" />

                    <TextView
                        android:id="@+id/signin_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/action_sign_in_short"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/purple_A400"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signin_button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_register"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_300" />

                    <TextView
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/action_register_in_short"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/purple_A400"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>